starlark-rust/starlark_syntax/src/syntax/grammar_tests/lambda.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Program:
x = lambda y: y + 1

Error:
error: `lambda` is not allowed in this dialect
 --> lambda:1:5
  |
1 | x = lambda y: y + 1
  |     ^^^^^^^^^^^^^^^
  |
